exports[`Test suite for Survivor Suvivor should render info correctly 1`] = `
<div
  className="col-xs-12 survivor ">
  <div
    className="col-xs-12 name">
    Test
  </div>
  <div
    className="col-xs-12 info">
    MALE
     | 
    10
  </div>
  <Component
    columns="6" />
  <div
    className="col-xs-12 distance">
    10
    km away
  </div>
</div>
`;

exports[`Test suite for Survivor should not break if it does not receive a distance 1`] = `
<div
  className="col-xs-12 survivor ">
  <div
    className="col-xs-12 name" />
  <div
    className="col-xs-12 info">
    FEMALE
     | 
  </div>
  <Component
    columns="6" />
</div>
`;
